Changed service interface and removed DOs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driverClassName=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url=jdbc:hsqldb:file:ptrackerdb;shutdown=true
 spring.datasource.username=SA
 spring.datasource.password=
+server.servlet.context-path=/tracker
