--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
 		<guava.version>31.1-jre</guava.version>
 		<hsqldb.version>2.7.1</hsqldb.version>
 		<jaxb-api.version>2.1</jaxb-api.version>
-		<springdoc-openapi-verion>1.6.14</springdoc-openapi-verion>
-		<spring-cloud-contract.verion>3.1.5</spring-cloud-contract.verion>
+		<springdoc-openapi.version>1.6.14</springdoc-openapi.version>
+		<model-mapper.version>3.1.1</model-mapper.version>
+		<spring-cloud-contract.version>3.1.5</spring-cloud-contract.version>
 		<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
 		<maven-buildhelper-plugin.version>3.0.0</maven-buildhelper-plugin.version>
 	</properties>
@@ -104,12 +105,17 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>${springdoc-openapi-verion}</version>
+			<version>${springdoc-openapi.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
-			<version>${spring-cloud-contract.verion}</version>
+			<version>${spring-cloud-contract.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${model-mapper.version}</version>
 		</dependency>
 	</dependencies>
 </project>
