--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 			<plugin>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
-				<version>${spring-cloud-contract.verion}</version>
+				<version>${spring-cloud-contract.version}</version>
 				<extensions>true</extensions>
 				<configuration>
 					<testFramework>JUNIT5</testFramework>
