--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<properties>
 		<java.version>17</java.version>
-		<spring.boot.version>2.7.6</spring.boot.version>
+		<spring.boot.version>2.7.7</spring.boot.version>
 		<guava.version>31.1-jre</guava.version>
 		<hsqldb.version>2.7.1</hsqldb.version>
 		<jaxb-api.version>2.1</jaxb-api.version>
@@ -16,6 +16,8 @@
 		<model-mapper.version>3.1.1</model-mapper.version>
 		<spring-cloud-contract.version>3.1.5</spring-cloud-contract.version>
 		<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
+		<failsafe-plugin.version>3.0.0-M7</failsafe-plugin.version>
+		<jacoco-plugin.version>0.8.8</jacoco-plugin.version>
 		<maven-buildhelper-plugin.version>3.0.0</maven-buildhelper-plugin.version>
 	</properties>
 	<build>
@@ -39,6 +41,65 @@
 				<version>${surefire-plugin.version}</version>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>${failsafe-plugin.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco-plugin.version}</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${project.build.directory}/jacoco-unit.exec</destFile>
+						</configuration>
+					</execution>
+					<execution>
+						<id>prepare-agent-integration</id>
+						<goals>
+							<goal>prepare-agent-integration</goal>
+						</goals>
+						<configuration>
+							<destFile>${project.build.directory}/jacoco-integration.exec</destFile>
+							<append>true</append>
+						</configuration>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>merge</goal>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<destFile>${project.build.directory}/jacoco.exec</destFile>
+							<fileSets>
+								<fileSet>
+									<directory>${project.build.directory}</directory>
+									<includes>
+										<include>*.exec</include>
+									</includes>
+								</fileSet>
+							</fileSets>
+							<dataFile>${project.build.directory}/jacoco.exec</dataFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
 				<version>${spring-cloud-contract.version}</version>
@@ -47,6 +108,7 @@
 					<testFramework>JUNIT5</testFramework>
 					<packageWithBaseClasses>hu.zsommboro.ptracker.integration.contract</packageWithBaseClasses>
 					<testMode>EXPLICIT</testMode>
+					<nameSuffixForTests>IT</nameSuffixForTests>
 				</configuration>
 			</plugin>
 			<plugin>
