--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<jaxb-api.version>2.1</jaxb-api.version>
 		<springdoc-openapi.version>1.6.14</springdoc-openapi.version>
 		<model-mapper.version>3.1.1</model-mapper.version>
+		<apache-httpclient.version>4.5.14</apache-httpclient.version>
 		<spring-cloud-contract.version>3.1.5</spring-cloud-contract.version>
 		<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
 		<failsafe-plugin.version>3.0.0-M7</failsafe-plugin.version>
@@ -134,8 +135,18 @@
 	</build>
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>${apache-httpclient.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-json</artifactId>
 			<version>${spring.boot.version}</version>
 		</dependency>
 		<dependency>
