--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.url=jdbc:hsqldb:file:ptrackerdb;shutdown=true
 spring.datasource.username=SA
 spring.datasource.password=
 server.servlet.context-path=/tracker
+# https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.spring-mvc.customize-jackson-objectmapper
+spring.jackson.deserialization.FAIL_ON_IGNORED_PROPERTIES=false
+spring.jackson.default-property-inclusion=non_null
+spring.jackson.serialization.write-dates-as-timestamps=false
