--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<springdoc-openapi.version>1.6.14</springdoc-openapi.version>
 		<model-mapper.version>3.1.1</model-mapper.version>
 		<apache-httpclient.version>4.5.14</apache-httpclient.version>
+		<awaitility.version>4.2.0</awaitility.version>
 		<spring-cloud-contract.version>3.1.5</spring-cloud-contract.version>
 		<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
 		<failsafe-plugin.version>3.0.0-M7</failsafe-plugin.version>
@@ -155,12 +156,6 @@
 			<version>${spring.boot.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<version>${spring.boot.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
@@ -189,6 +184,18 @@
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>${model-mapper.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring.boot.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>${awaitility.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
