--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<properties>
 		<java.version>17</java.version>
-		<spring.boot.version>2.7.8</spring.boot.version>
+		<spring.boot.version>2.7.9</spring.boot.version>
 		<guava.version>31.1-jre</guava.version>
 		<hsqldb.version>2.7.1</hsqldb.version>
 		<jaxb-api.version>2.1</jaxb-api.version>
@@ -19,6 +19,7 @@
 		<spring-cloud-contract.version>3.1.5</spring-cloud-contract.version>
 		<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
 		<failsafe-plugin.version>3.0.0-M7</failsafe-plugin.version>
+		<jib-plugin.version>3.3.1</jib-plugin.version>
 		<jacoco-plugin.version>0.8.8</jacoco-plugin.version>
 		<maven-buildhelper-plugin.version>3.0.0</maven-buildhelper-plugin.version>
 	</properties>
@@ -28,6 +29,13 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring.boot.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -132,6 +140,19 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>${jib-plugin.version}</version>
+				<configuration>
+					<from>
+						<image>eclipse-temurin</image>
+					</from>
+					<to>
+						<image>gcr.io/${gce-projectId}/ptracker</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -153,6 +174,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>${spring.boot.version}</version>
 		</dependency>
 		<dependency>
