--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,19 @@
 	<version>1.0-SNAPSHOT</version>
 	<properties>
 		<java.version>17</java.version>
-		<spring.boot.version>2.7.9</spring.boot.version>
+		<spring.boot.version>2.7.11</spring.boot.version>
 		<guava.version>31.1-jre</guava.version>
 		<hsqldb.version>2.7.1</hsqldb.version>
 		<jaxb-api.version>2.1</jaxb-api.version>
-		<springdoc-openapi.version>1.6.14</springdoc-openapi.version>
+		<springdoc-openapi.version>1.6.15</springdoc-openapi.version>
 		<model-mapper.version>3.1.1</model-mapper.version>
 		<apache-httpclient.version>4.5.14</apache-httpclient.version>
 		<awaitility.version>4.2.0</awaitility.version>
-		<spring-cloud-contract.version>3.1.5</spring-cloud-contract.version>
-		<surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
-		<failsafe-plugin.version>3.0.0-M7</failsafe-plugin.version>
+		<spring-cloud-contract.version>3.1.6</spring-cloud-contract.version>
+		<surefire-plugin.version>3.0.0</surefire-plugin.version>
+		<failsafe-plugin.version>3.0.0</failsafe-plugin.version>
 		<jib-plugin.version>3.3.1</jib-plugin.version>
-		<jacoco-plugin.version>0.8.8</jacoco-plugin.version>
+		<jacoco-plugin.version>0.8.9</jacoco-plugin.version>
 		<maven-buildhelper-plugin.version>3.0.0</maven-buildhelper-plugin.version>
 	</properties>
 	<build>
