Major spring boot version upgrade

--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,15 @@
 	<version>1.0-SNAPSHOT</version>
 	<properties>
 		<java.version>17</java.version>
-		<spring.boot.version>2.7.11</spring.boot.version>
+		<spring.boot.version>3.0.6</spring.boot.version>
 		<guava.version>31.1-jre</guava.version>
 		<hsqldb.version>2.7.1</hsqldb.version>
 		<jaxb-api.version>2.1</jaxb-api.version>
 		<springdoc-openapi.version>1.6.15</springdoc-openapi.version>
 		<model-mapper.version>3.1.1</model-mapper.version>
-		<apache-httpclient.version>4.5.14</apache-httpclient.version>
+		<apache-httpclient.version>5.2.1</apache-httpclient.version>
 		<awaitility.version>4.2.0</awaitility.version>
-		<spring-cloud-contract.version>3.1.6</spring-cloud-contract.version>
+		<spring-cloud-contract.version>4.0.2</spring-cloud-contract.version>
 		<surefire-plugin.version>3.0.0</surefire-plugin.version>
 		<failsafe-plugin.version>3.0.0</failsafe-plugin.version>
 		<jib-plugin.version>3.3.1</jib-plugin.version>
@@ -157,8 +157,8 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
 			<version>${apache-httpclient.version}</version>
 		</dependency>
 		<dependency>
@@ -170,6 +170,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-json</artifactId>
 			<version>${spring.boot.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
