--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,11 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring.boot.version>3.0.6</spring.boot.version>
+		<jakarta-servlet.version>5.0.0</jakarta-servlet.version>
 		<guava.version>31.1-jre</guava.version>
 		<hsqldb.version>2.7.1</hsqldb.version>
+		<slf4j-api.version>2.0.7</slf4j-api.version>
+		<log4j-slf4j-impl.version>2.20.0</log4j-slf4j-impl.version>
 		<jaxb-api.version>2.1</jaxb-api.version>
 		<springdoc-openapi.version>1.6.15</springdoc-openapi.version>
 		<model-mapper.version>3.1.1</model-mapper.version>
@@ -175,12 +178,42 @@
 					<groupId>ch.qos.logback</groupId>
 					<artifactId>logback-classic</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.apache.logging.log4j</groupId>
+					<artifactId>log4j-to-slf4j</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring.boot.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jetty</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>${jakarta-servlet.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j2-impl</artifactId>
+			<version>${log4j-slf4j-impl.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
