Changed modelmapper to mapstruct and id mapping for constituents

--- a/pom.xml
+++ b/pom.xml
@@ -8,23 +8,23 @@
 	<version>1.0-SNAPSHOT</version>
 	<properties>
 		<java.version>17</java.version>
-		<spring.boot.version>3.0.6</spring.boot.version>
+		<spring.boot.version>3.1.6</spring.boot.version>
 		<jakarta-servlet.version>5.0.0</jakarta-servlet.version>
 		<guava.version>32.1.3-jre</guava.version>
-		<hsqldb.version>2.7.1</hsqldb.version>
+		<hsqldb.version>2.7.2</hsqldb.version>
 		<slf4j-api.version>2.0.9</slf4j-api.version>
 		<log4j-slf4j-impl.version>2.22.0</log4j-slf4j-impl.version>
 		<jaxb-api.version>2.1</jaxb-api.version>
 		<springdoc-openapi.version>1.7.0</springdoc-openapi.version>
-		<model-mapper.version>3.2.0</model-mapper.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<apache-httpclient.version>5.2.2</apache-httpclient.version>
 		<awaitility.version>4.2.0</awaitility.version>
 		<spring-cloud-contract.version>4.0.4</spring-cloud-contract.version>
 		<surefire-plugin.version>3.0.0</surefire-plugin.version>
 		<failsafe-plugin.version>3.0.0</failsafe-plugin.version>
 		<jib-plugin.version>3.3.1</jib-plugin.version>
-		<jacoco-plugin.version>0.8.9</jacoco-plugin.version>
-		<maven-buildhelper-plugin.version>3.0.0</maven-buildhelper-plugin.version>
+		<jacoco-plugin.version>0.8.11</jacoco-plugin.version>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 	</properties>
 	<build>
 		<plugins>
@@ -43,9 +43,17 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
 					<source>17</source>
 					<target>17</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${mapstruct.version}</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -123,25 +131,6 @@
 					<testMode>EXPLICIT</testMode>
 					<nameSuffixForTests>IT</nameSuffixForTests>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>${maven-buildhelper-plugin.version}</version>
-				<executions>
-					<execution>
-						<id>add-source</id>
-						<phase>generate-test-sources</phase>
-						<goals>
-							<goal>add-test-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>${project.build.directory}/generated-test-sources/contracts/</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
@@ -247,9 +236,9 @@
 			<version>${spring-cloud-contract.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.modelmapper</groupId>
-			<artifactId>modelmapper</artifactId>
-			<version>${model-mapper.version}</version>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${mapstruct.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
