--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -11,3 +11,6 @@ appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 rootLogger.level = info
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
+
+logger.hibernateSQLParameters.name = org.hibernate.type
+logger.hibernateSQLParameters.level = trace
