--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=hsql
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driverClassName=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url=jdbc:hsqldb:file:ptrackerdb;shutdown=true
 spring.datasource.username=SA
 spring.datasource.password=
 server.servlet.context-path=/tracker
 price.load.cron="0 0 20 * * 1-5"
-management.endpoints.web.exposure.include: info,health
-management.endpoint.health.show-details:when-authorized
+management.endpoints.web.exposure.include=info,health
+management.endpoint.health.show-details=when-authorized
 # https://docs.spring.io/spring-boot/docs/current/reference/html/howto.html#howto.spring-mvc.customize-jackson-objectmapper
 spring.jackson.deserialization.FAIL_ON_IGNORED_PROPERTIES=false
 spring.jackson.default-property-inclusion=non_null
