--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<jib-plugin.version>3.4.0</jib-plugin.version>
 		<jacoco-plugin.version>0.8.11</jacoco-plugin.version>
 		<maven-compiler-plugin.version>3.12.0</maven-compiler-plugin.version>
+		<itCoverageAgent></itCoverageAgent>
 	</properties>
 	<build>
 		<plugins>
@@ -62,6 +63,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${surefire-plugin.version}</version>
+				<configuration>
+					<argLine>${argLine}</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -75,6 +79,9 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<argLine>${itCoverageAgent}</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -82,42 +89,50 @@
 				<version>${jacoco-plugin.version}</version>
 				<executions>
 					<execution>
-						<id>prepare-agent</id>
+						<id>prepare-unit-test-agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
-						<configuration>
-							<destFile>${project.build.directory}/jacoco-unit.exec</destFile>
-						</configuration>
 					</execution>
 					<execution>
-						<id>prepare-agent-integration</id>
+						<id>prepare-it-test-agent</id>
 						<goals>
-							<goal>prepare-agent-integration</goal>
+							<goal>prepare-agent</goal>
 						</goals>
+						<phase>pre-integration-test</phase>
 						<configuration>
-							<destFile>${project.build.directory}/jacoco-integration.exec</destFile>
-							<append>true</append>
+							<propertyName>itCoverageAgent</propertyName>
 						</configuration>
 					</execution>
 					<execution>
-						<id>report</id>
-						<phase>post-integration-test</phase>
+						<id>default-report</id>
 						<goals>
-							<goal>merge</goal>
 							<goal>report</goal>
 						</goals>
+					</execution>
+					<execution>
+						<id>default-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
 						<configuration>
-							<destFile>${project.build.directory}/jacoco.exec</destFile>
-							<fileSets>
-								<fileSet>
-									<directory>${project.build.directory}</directory>
-									<includes>
-										<include>*.exec</include>
-									</includes>
-								</fileSet>
-							</fileSets>
-							<dataFile>${project.build.directory}/jacoco.exec</dataFile>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.85</minimum>
+										</limit>
+										<limit>
+											<counter>BRANCH</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.60</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
 						</configuration>
 					</execution>
 				</executions>
